# template-service

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
systemd/: template-service.service
